plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/oldImport/tier1/androidAppConsumesKmmLibSource/kmmLib/src/commonMain/kotlin/test/kmmLib_commonMain_api.kt
package test

expect class <!LINE_MARKER("descr='Has actuals in [project.kmmLib.iosMain, project.kmmLib.main] modules'; targets=[(text=project.kmmLib.iosMain; icon=nodes/Module.svg); (text=project.kmmLib.main; icon=nodes/Module.svg)]")!>CommonMainExpect<!> {
    fun <!LINE_MARKER("descr='Has actuals in [project.kmmLib.iosMain, project.kmmLib.main] modules'; targets=[(text=project.kmmLib.iosMain; icon=nodes/Module.svg); (text=project.kmmLib.main; icon=nodes/Module.svg)]")!>commonApi<!>()
}

fun produceCommonMainExpect(): CommonMainExpect = null!!
fun consumeCommonMainExpect(e: CommonMainExpect) { }
